objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Gong__MainCompetitors__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_Standing_Comments__c</fullName>
        <description>When good Standing is no, this must be filled in according to validation rule</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>When God standing in state is selected as no, use this space to explain why.</inlineHelpText>
        <label>Good Standing Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_Standing_within_State__c</fullName>
        <description>Yes or No pick list to answer if the business is in good standing with the state</description>
        <inlineHelpText>Is this business currently in good standing with the state?</inlineHelpText>
        <label>Good Standing within State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Granted_FastPass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the dealer has been granted the fast pass and turned on in netsuite</description>
        <inlineHelpText>This should only be checked once netsuite action has been taken to allow for FastPass</inlineHelpText>
        <label>Granted FastPass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Bid__c</fullName>
        <formula>Auction__r.Winning_Bid_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Bid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_many_cars_do_you_stock__c</fullName>
        <description>CSO-215:  SFDC Lead Gen: Lead to Oppty Mapping</description>
        <label>How many cars do you stock</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IST_Account_Manager_Email__c</fullName>
        <description>ist Account manager for the Account on the opportunity - used to send notification to IST rep when fastPass is granted.  Used in Email Alert</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the email address of the IST Account manager</inlineHelpText>
        <label>IST Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inactivity_reminder_sent_date__c</fullName>
        <description>This field is updated by the flow &quot;Opportunity: Recurring inactivity reminder&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inactivity reminder sent date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Expiration__c</fullName>
        <description>Insurance Expiration of the dealership</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Insurance Expiration of the dealership</inlineHelpText>
        <label>Insurance Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intelliscore_Plus_Risk_Class__c</fullName>
        <description>Risk score based on the Business Intelliscore Plus Rating</description>
        <formula>IF(Business_Intelliscore_Plus_Rating__c  &lt;= 0,null,
IF(Business_Intelliscore_Plus_Rating__c  &lt;= 10,5,
IF(Business_Intelliscore_Plus_Rating__c  &lt;= 25,4,
IF(Business_Intelliscore_Plus_Rating__c  &lt;= 50,3,
IF(Business_Intelliscore_Plus_Rating__c  &lt;= 75,2,
IF(Business_Intelliscore_Plus_Rating__c  &lt;= 100,1,null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>50k - Max # Required = 3
75k - Max # Required = 3
100k - Max # Required = 2</inlineHelpText>
        <label>Intelliscore Plus Risk Class</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_in_Daily_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dealer has shown interest in Daily Fee. Jira ticket https://acvauctions.atlassian.net/browse/CSO-573</description>
        <inlineHelpText>Dealer has shown interest in Daily Fee.</inlineHelpText>
        <label>Interest in Daily Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Turn_Time__c</fullName>
        <description>CSO-215:  SFDC Lead Gen: Lead to Oppty Mapping</description>
        <label>Inventory Turn Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last30DaysBought__c</fullName>
        <formula>TEXT(Account.Last_30_Days_Bought__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 30 Days Bought</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Negotiation__c</fullName>
        <description>Time stamp of the latest Negotiation Bid associated with the Opportunities Auction. This is brought it through the integration from the negotiation_bids table and looks for the opportunity based on the Unique ext. Id: Auction_ID__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Latest Negotiation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Opportunities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Opportunities</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leadership_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leadership Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_City__c</fullName>
        <description>Legal city for ACV Capital.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter a legal city.</inlineHelpText>
        <label>Legal City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <description>Legal name for ACV Capital.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_State__c</fullName>
        <description>Legal state for ACV Capital.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter a legal state.</inlineHelpText>
        <label>Legal State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Street_Address__c</fullName>
        <description>Legal street name for ACV Capital.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter a legal street address.</inlineHelpText>
        <label>Legal Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Zip_Code__c</fullName>
        <description>Legal zip code for ACV Capital.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter a legal zip code.</inlineHelpText>
        <label>Legal Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Auction_Manager__c</fullName>
        <formula>HYPERLINK(&apos;https://tools.acvauctions.com/auctions/dashboard?auction_id=&apos;+Auction__r.id__c , Auction__r.id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Auction Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Deal_Maker__c</fullName>
        <description>Link to ACV Tools Deal Maker</description>
        <formula>HYPERLINK(&apos;https://tools.acvauctions.com/deal-maker?auction_id=&apos;+Auction__r.id__c+&apos;&amp;buyer_id=&apos;+Buyer_Primary_Contact__r.ID__c, Auction__r.id__c+&quot;/&quot;+Buyer_Primary_Contact__r.ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to ACV Tools Deal Maker uses Auction ID and Buyer Primary Contact ID</inlineHelpText>
        <label>Link to Deal Maker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Meeting_Scheduled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Management Meeting Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Line_Limit_Elegible__c</fullName>
        <description>Dealers are going to be charged based on risk from now on.
https://acvauctions.atlassian.net/browse/CSO-573</description>
        <label>Max Line Limit Elegible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Step_Issues_or_Objections__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Step, Issues, or Objections</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Bankruptcies__c</fullName>
        <description>Number of times business has filed for bankruptcy</description>
        <inlineHelpText>Number of times business has filed for bankruptcy</inlineHelpText>
        <label>Number of Bankruptcies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objection__c</fullName>
        <label>Objection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer&apos;s Wholesale Mgr Objected</fullName>
                </value>
                <value>
                    <fullName>ACV Fees</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t get to Owner or GM</fullName>
                </value>
                <value>
                    <fullName>3rd Party Wholesaler gets the Cars</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opty_Auction_Status__c</fullName>
        <formula>Text(Auction__r.status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opty Auction Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other: Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pack_Fee__c</fullName>
        <description>Part of a group of fields that calculate the Amount field on Fleet/Lease Opps.
Base Seller Fee
VCI Fee
Pack Fee
Go Green Fee
Anticipated Yearly Volume</description>
        <label>Pack Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field for True360 opportunity</description>
        <label>Point of Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Point of Contact)</relationshipLabel>
        <relationshipName>Opportunities_Opp_POC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PotentialMonthlyBuyVolume__c</fullName>
        <formula>TEXT(Account.Potential_Monthly_Buy_Volume__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Monthly Buy Volume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Monthly_Sell_Volume__c</fullName>
        <description>Potential Monthly sell volume from Account</description>
        <formula>TEXT( Account.Potential_Monthly_Sell_Volume__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Potential Monthly sell volume from Account</inlineHelpText>
        <label>Potential Monthly Sell Volume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferences_of_Cars_to_Inspect__c</fullName>
        <description>Field for True360 Opportunity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferences of Cars to Inspect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <label>Price Book</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Interest_in_Daily_Fee__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AAA Pricebook 9.23.21</fullName>
                </value>
                <value>
                    <fullName>Fast Pay - $100</fullName>
                    <label>Accelerate - $100</label>
                </value>
                <value>
                    <fullName>Fast Pay - $125</fullName>
                    <label>Accelerate - $125</label>
                </value>
                <value>
                    <fullName>Fast Pay - $150</fullName>
                    <label>Accelerate - $150</label>
                </value>
                <value>
                    <fullName>Fast Pay -  $30</fullName>
                    <label>Accelerate -  $30</label>
                </value>
                <value>
                    <fullName>Fast Pay - $40</fullName>
                    <label>Accelerate - $40</label>
                </value>
                <value>
                    <fullName>Fast Pay - $60</fullName>
                    <label>Accelerate - $60</label>
                </value>
                <value>
                    <fullName>Fast Pay - $75</fullName>
                    <label>Accelerate - $75</label>
                </value>
                <value>
                    <fullName>TA Hold - $100</fullName>
                    <label>Advantage - $100</label>
                </value>
                <value>
                    <fullName>TA Hold - $125</fullName>
                    <label>Advantage - $125</label>
                </value>
                <value>
                    <fullName>TA Hold - $150</fullName>
                    <label>Advantage - $150</label>
                </value>
                <value>
                    <fullName>TA Hold - $50</fullName>
                    <label>Advantage - $50</label>
                </value>
                <value>
                    <fullName>TA Hold - $75</fullName>
                    <label>Advantage - $75</label>
                </value>
                <value>
                    <fullName>April 2022 - Daily Fee - A</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Daily Fee - B</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Daily Fee - C</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Daily Fee - D</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Daily Fee - E</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Daily Fee - Gold</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Daily Fee - Orange Elite</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Daily Fee - Silver</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Flat Fee - A</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Flat Fee - B</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Flat Fee - C</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Flat Fee - D</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Flat Fee - E</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Flat Fee - Gold</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Flat Fee - Orange Elite</fullName>
                </value>
                <value>
                    <fullName>April 2022 - Flat Fee - Silver</fullName>
                </value>
                <value>
                    <fullName>A / Orange Elite Pricing 9.28.21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Variance_Percentage__c</fullName>
        <formula>((Floor_Value__c-High_Bid__c)/Floor_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Variance Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Variance__c</fullName>
        <formula>Floor_Value__c -  High_Bid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <description>CAP-644: Grabs the Email from the associated Account of &apos;Primary Contact&apos;.  Required to send welcome emails to clients who have purchased Orange Elite, Advantage, Floorplan, Accelerate Credit Products</description>
        <formula>Primary_Contact__r.Email</formula>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Fico_Score__c</fullName>
        <description>Fico score of the primary owner</description>
        <label>Primary Fico Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Minimum_Score__c</fullName>
        <description>Minimum score for primary Owner</description>
        <inlineHelpText>minimum score for primary owner</inlineHelpText>
        <label>Primary Minimum Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Open_Credit_Balance__c</fullName>
        <description>Open Credit Balance of primary owner</description>
        <inlineHelpText>Open Credit Balance of primary owner</inlineHelpText>
        <label>Primary Open Credit Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Owner_Email__c</fullName>
        <description>This is the email address of the Primary owner of the ACV capital referral opportunity - often can differ from the primary contact and represents where legal documentation should be sent</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Email address of the primary owner of the dealership and recipient of documents.</inlineHelpText>
        <label>Primary Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Owner__c</fullName>
        <description>The primary owner of the dealership</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The primary owner of the dealership</inlineHelpText>
        <label>Primary Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Revolving_Credit__c</fullName>
        <description>Revolving credit of the primary owner</description>
        <inlineHelpText>Revolving credit amount for the primary owner</inlineHelpText>
        <label>Primary Revolving Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProposedSolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposed Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSM_Comments__c</fullName>
        <description>Comments from the RSM when they get the deal in</description>
        <encryptionScheme>None</encryptionScheme>
        <label>RSM Comments</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Referred__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason Referred</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordType_DeveloperName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType DeveloperName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Promotion__c</fullName>
        <description>Field indicates the Referral Promotion for ACV Capital.</description>
        <inlineHelpText>Please select the Promotion used for this Referral to ACV Capital.</inlineHelpText>
        <label>Referral Promotion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Summer Savings</fullName>
                </value>
                <value>
                    <fullName>Spring Into Savings</fullName>
                </value>
                <value>
                    <fullName>60 Days for $60</fullName>
                </value>
                <value>
                    <fullName>March Madness</fullName>
                </value>
                <value>
                    <fullName>ZDS</fullName>
                </value>
                <value>
                    <fullName>No Promotion</fullName>
                </value>
                <value>
                    <fullName>Digital - 2 Waived Fees</fullName>
                </value>
                <value>
                    <fullName>California Blitz Priority</fullName>
                </value>
                <value>
                    <fullName>Utilization Blitz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <description>used to classify the way in which the opportunity came to be</description>
        <label>Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capital Pilot 2020</fullName>
                </value>
                <value>
                    <fullName>Standard RSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_Date__c</fullName>
        <description>Date stage marked as referred</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referred Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Report_Recipients__c</fullName>
        <description>Filed for True360 Opportunity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Grade__c</fullName>
        <description>Dealers are going to be charged based on risk.
https://acvauctions.atlassian.net/browse/CSO-573</description>
        <label>Risk Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>Orange Elite</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seller_Dealership_ID__c</fullName>
        <description>Carries Dealership ID over to opportunity object</description>
        <formula>Seller_Dealership__r.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Dealership ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller Dealership</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DealMaker Opportunities (Seller)</relationshipLabel>
        <relationshipName>DealMaker_Opportunities_Seller</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_IST__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller IST</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DealmakerOpportunitiesSellerIST</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealmaker Opportunities (Seller)</relationshipLabel>
        <relationshipName>DealMaker_Opportunities_Seller</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_Region__c</fullName>
        <description>Seller Region from the Account object.</description>
        <formula>Seller_Dealership__r.Maps_Sales_Region_Name__c</formula>
        <label>Seller Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Territory_Manager__c</fullName>
        <description>Seller Territory Manager from the Account object.</description>
        <formula>Seller_Dealership__r.Territory_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Territory Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller_Territory__c</fullName>
        <description>Seller Territory from the Account object.</description>
        <formula>Seller_Dealership__r.Maps_Sales_Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specifics_Regarding_Service__c</fullName>
        <description>Field for True360 Opportunity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Specifics Regarding Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Additional_Documents_Timestamp__c</fullName>
        <description>FastPass Opportunity - Timestamp the status of &quot;Additional Documents&quot; was selected.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>FastPass Opportunity - Timestamp the status of &quot;Additional Documents&quot; was selected.</inlineHelpText>
        <label>Status &quot;Additional Documents&quot; Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Closed_Timestamp__c</fullName>
        <description>FastPass Opportunity - Timestamp the status of &quot;Closed Won or Closed Lost&quot; was selected.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>FastPass Opportunity - Timestamp the status of &quot;Closed Won or Closed Lost&quot; was selected.</inlineHelpText>
        <label>Status &quot;Closed&quot; Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Documents_Received_Timestamp__c</fullName>
        <description>FastPass Opportunity - Timestamp the status of &quot;Documents Received&quot; was selected.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>FastPass Opportunity - Timestamp the status of &quot;Documents Received&quot; was selected.</inlineHelpText>
        <label>Status &quot;Documents Received&quot; Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_New_Timestamp__c</fullName>
        <description>FastPass Opportunity - Timestamp the status of &quot;New&quot; was selected.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>FastPass Opportunity - Timestamp the status of &quot;New&quot; was selected.</inlineHelpText>
        <label>Status &quot;New&quot; Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Processing_Timestamp__c</fullName>
        <description>FastPass Opportunity - Timestamp the status of &quot;Processing&quot; was selected.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>FastPass Opportunity - Timestamp the status of &quot;Processing&quot; was selected.</inlineHelpText>
        <label>Status &quot;Processing&quot; Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stipulations__c</fullName>
        <description>Field used for ACV Capital to note any additional contract stipulations.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Stipulations</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Lien_Comments__c</fullName>
        <description>When tax Lien is &apos;yes&quot; the comments must be filled in</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide details related to the Tax lien selection,required when tax lien selection is &apos;Yes&apos;</inlineHelpText>
        <label>Tax Lien Comments</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Lien__c</fullName>
        <description>Does the business have ay tax liens?</description>
        <inlineHelpText>Does the business have ay tax liens?</inlineHelpText>
        <label>Tax Lien</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Manager__c</fullName>
        <description>TM from Account page</description>
        <formula>Account.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Territory of the account on the opportunity</description>
        <formula>Account.Territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCC_Expriation_Date__c</fullName>
        <description>Expiration of UCC Filing Date (a manually populate date field on the ACV Capital referral Record type)</description>
        <formula>ADDMONTHS( UCC_Filing_Date__c , 60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula adds 5 years to the filing date to populate the expiration date.</inlineHelpText>
        <label>UCC Expriation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UCC_Filing_Date__c</fullName>
        <description>a manually populate date field on the ACV Capital referral Record type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>UCC Filing Date</label>
        <type>Date</type>
    </fields>
</CustomObject>